--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,6 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+RepoPop/RepoPop/Resources/Assets.xcassets/.DS_Store
+RepoPop/RepoPop/Resources/.DS_Store
+.DS_Store
